# rust-restapi

./: .env  Cargo.toml  Dockerfile
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: mod.rs
src/middleware/: auth.rs
src/models/: todo.rs  user.rs
src/repositories/: mod.rs
src/services/: mod.rs
